--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -65,4 +65,4 @@ jobs:
           DEFAULT_BUMP: patch
           DRY_RUN: false
           WITH_V: true
-#testing 11.17 done now hopefully
+#testing 11.17 again
