--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,20 +37,20 @@ jobs:
       - name: deploy app
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, '+'), '#skip') }}
         run: flyctl deploy --remote-only
-      - name: test success
-        uses: rjstone/discord-webhook-notify@v1
-        if: success()
-        with:
-          severity: info
-          details: Deployment succeeded!
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: test failure
-        uses: rjstone/discord-webhook-notify@v1
-        if: failure()
-        with:
-          severity: error
-          details: Deployment failed!
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      #- name: test success
+       # uses: rjstone/discord-webhook-notify@v1
+        #if: success()
+        #with:
+         # severity: info
+          #details: Deployment succeeded!
+          #webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      #- name: test failure
+       # uses: rjstone/discord-webhook-notify@v1
+        #if: failure()
+        #with:
+         # severity: error
+          #details: Deployment failed!
+          #webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
     needs: [simple_deployment_pipeline]
