--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -16,4 +16,4 @@ jobs:
         uses: jtalk/url-health-check-action@v2
         with:
           url: https://paraspokedex.fly.dev/periodic
-          
+#ping /periodic          
