--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -2,7 +2,7 @@ name: Periodic Health Check
 
 on:
   schedule:
-    - cron: '*/2 * * * *'
+    # - cron: '0 0 * * *'
 
 jobs:
   health_check:
@@ -12,4 +12,4 @@ jobs:
         uses: jtalk/url-health-check-action@v2
         with:
           url: https://paraspokedex.fly.dev/periodi
-#ping /periodic every 2 minutes         
+#ping /periodic at the end of every day  
