--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -1,7 +1,11 @@
 name: Periodic Health Check
 
 on:
-  schedule:
+  push:
+    branches:
+      -master
+  
+  #schedule:
     # - cron: '0 0 * * *'
 
 jobs:
@@ -11,5 +15,5 @@ jobs:
       - name: Ping /health
         uses: jtalk/url-health-check-action@v2
         with:
-          url: https://paraspokedex.fly.dev/periodi
+          url: https://paraspokedex.fly.dev/periodic
 #ping /periodic at the end of every day  
